<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
      android:id="@+id/iv_poster"
      android:layout_width="0dp"
      android:layout_height="200dp"
      android:layout_marginTop="8dp"
      android:contentDescription="@string/movie_image"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@android:color/darker_gray"/>
    <TextView
      android:id="@+id/tv_title_label"
      android:text="@string/title"
      app:layout_constraintBaseline_toBaselineOf="@+id/tv_title"
      app:layout_constraintStart_toStartOf="parent"
      style="@style/title_style"/>
    <TextView
      android:id="@+id/tv_title"
      android:layout_marginTop="@dimen/margin"
      app:layout_constraintStart_toEndOf="@+id/tv_title_label"
      app:layout_constraintTop_toBottomOf="@+id/iv_poster"
      style="@style/title_style"/>
    <TextView
      android:id="@+id/tv_user_rating_label"
      android:text="@string/user_rating"
      app:layout_constraintBaseline_toBaselineOf="@+id/tv_user_rating"
      app:layout_constraintStart_toStartOf="parent"
      style="@style/user_rating_style"/>
    <TextView
      android:id="@+id/tv_user_rating"
      android:layout_marginTop="@dimen/margin"
      app:layout_constraintStart_toEndOf="@+id/tv_user_rating_label"
      app:layout_constraintTop_toBottomOf="@+id/tv_title"
      style="@style/user_rating_style"/>
    <TextView
      android:id="@+id/tv_release_date_label"
      android:text="@string/release_date"
      app:layout_constraintBaseline_toBaselineOf="@+id/tv_release_date"
      app:layout_constraintDimensionRatio="w,1:1"
      app:layout_constraintStart_toStartOf="parent"
      style="@style/release_date_style"/>
    <TextView
      android:id="@+id/tv_release_date"
      android:layout_marginTop="@dimen/margin"
      app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
      app:layout_constraintTop_toBottomOf="@+id/tv_user_rating"
      style="@style/release_date_style"/>
    <TextView
      android:id="@+id/tv_description_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/description"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
      style="@style/description_style"/>
    <TextView
      android:id="@+id/tv_description"
      android:layout_width="368dp"
      android:layout_height="270dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_description_label"
      style="@style/description_style"/>
  </android.support.constraint.ConstraintLayout>
</ScrollView>